TPLKEENLY-172 #resolve #comment Overflow visible on the item page.

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2081,6 +2081,9 @@ body {
             border-left: none;
         }
     }
+    .item-page {
+        overflow: visible;
+    }
 }
 div.intro {
     padding: 0;
